--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-VITE_APP_PATH=template/
+VITE_APP_PATH=to-do/
 
-VITE_APP_NAME=STATIC PWA TEMPLATE
-VITE_APP_SHORT_NAME=STATIC PWA
-VITE_APP_DESCRIPTION=Static PWA Template
-VITE_APP_ICON=
+VITE_APP_NAME=To-do:
+VITE_APP_SHORT_NAME=To-do:
+VITE_APP_DESCRIPTION=Simple To-do PWA
+VITE_APP_ICON=ico.svg
 VITE_APP_VERSION=1.0.0
 
 VITE_DEV_NAME=hhiruko
